--- a/src/app/user-manage/components/add-user/add-user.component.html
+++ b/src/app/user-manage/components/add-user/add-user.component.html
@@ -65,7 +65,7 @@
                 class="text-capitalize"
                 ngModel
                 #username="ngModel"
-                name="full_name"
+                name="username"
                 class="form-control"
                 aria-describedby="username"
                 type="text"
@@ -115,7 +115,7 @@
               <input
                 ngModel
                 #birthdate="ngModel"
-                name="birth_date"
+                name="birthdate"
                 class="form-control"
                 aria-describedby="birthdate"
                 type="date"
