--- a/src/app/user-manage/components/edit-user/edit-user.component.html
+++ b/src/app/user-manage/components/edit-user/edit-user.component.html
@@ -67,9 +67,9 @@
           <div class="col-9">
             <input
               class="text-capitalize input-customize"
-              [ngModel]="userInfo?.full_name"
+              [ngModel]="userInfo?.username"
               #username="ngModel"
-              name="full_name"
+              name="username"
               class="form-control input-customize"
               aria-describedby="username"
               type="text"
