--- a/src/app/user-manage/components/view-user/view-user.component.html
+++ b/src/app/user-manage/components/view-user/view-user.component.html
@@ -32,7 +32,7 @@
           style="width: 80%;"
         >
           <h3 class="h2 fs-3 text-white mb-3 text-capitalize">
-            {{ userInfo?.full_name }}
+            {{ userInfo?.username }}
           </h3>
           <span class="text">{{ userInfo?.rolename }}</span>
         </div>
