--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,7 +60,7 @@
         >
           <mat-icon>notifications_none</mat-icon>
         </button>
-        <mat-menu class="bg-danger" #notification="matMenu">
+        <mat-menu #notification="matMenu">
           <button mat-menu-item>
             thông báo đơn hàng 1
           </button>
@@ -89,7 +89,7 @@
             </div>
           </mat-menu>
           <button mat-menu-item>{{ 'account' | translate }}</button>
-          <button mat-menu-item>Đỗi mật khẩu</button>
+          <button mat-menu-item>{{ 'change-password' | translate }}</button>
           <button mat-menu-item>{{ 'auth.logout' | translate }}</button>
         </mat-menu>
       </div>
