--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -1,6 +1,6 @@
 <div class="nav navbar mt-4 mb-5 mx-3 d-block">
   <p class="fs-3 float-start text-primary">
-    {{ 'user.list-employee' | translate }}
+    {{ 'product.list-product' | translate }}
   </p>
   <button
     title="{{ 'user.create-user' | translate }}"
