--- a/src/app/product-manage/containers/product/product.component.scss
+++ b/src/app/product-manage/containers/product/product.component.scss
@@ -2,15 +2,11 @@ table {
   width: 100%;
 }
 .mat-column-id {
-  width: 50px;
-  padding-right: 24px;
+  width: 32px;
 }
-.mat-column-delete {
-  width: 50px;
-}
-.mat-column-edit {
-  text-align: center;
-  width: 100px;
+.mat-column-createdAt {
+  padding-right: 2rem;
+  width: max-content;
 }
 .mat-header-cell {
   font-weight: bolder;
