--- a/src/app/supplier-manage/components/edit-supplier/edit-supplier.component.html
+++ b/src/app/supplier-manage/components/edit-supplier/edit-supplier.component.html
@@ -10,7 +10,7 @@
     </mat-icon>
   </mat-button>
   <p class="text-primary fs-3 px-3 mt-3">
-    {{ 'user.create-supplier' | translate }}
+    {{ 'user.update-supplier' | translate }}
   </p>
 </div>
 <div class="container bg-white shadow px-3">
@@ -47,9 +47,9 @@
             <span class="text-danger">*</span>
           </label>
           <input
-            [ngModel]="SupplierInfo?.phone_number"
+            [ngModel]="SupplierInfo?.phone"
             #phone_number="ngModel"
-            name="phone_number"
+            name="phone"
             placeholder="{{ 'placeholder.input-phone' | translate }}"
             type="text"
             required
