--- a/src/app/supplier-manage/containers/supplier/supplier.component.html
+++ b/src/app/supplier-manage/containers/supplier/supplier.component.html
@@ -39,11 +39,11 @@
     </ng-container>
 
     <!-- phone Column -->
-    <ng-container matColumnDef="phone_nummber">
+    <ng-container matColumnDef="phone">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'user.phone-number' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.phone_number }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
     </ng-container>
 
     <!-- description Column -->
