--- a/src/app/user-manage/containers/customer-manage/customer-manage.component.html
+++ b/src/app/user-manage/containers/customer-manage/customer-manage.component.html
@@ -21,12 +21,12 @@
         </td>
       </ng-container>
       <!-- Name Column -->
-      <ng-container matColumnDef="full_name">
+      <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'user.username' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          <div class="text-capitalize">{{ element.full_name }}</div>
+          <div class="text-capitalize">{{ element.username }}</div>
         </td>
       </ng-container>
 
