--- a/src/app/user-manage/containers/customer-manage/customer-manage.component.scss
+++ b/src/app/user-manage/containers/customer-manage/customer-manage.component.scss
@@ -2,30 +2,33 @@ table {
   width: 100%;
 }
 .mat-column-id {
-  width: 50px;
-  padding-right: 24px;
-  text-align: center;
+  width: 32px;
 }
-.mat-column-delete {
-  width: 50px;
-}
-.mat-column-edit {
-  text-align: center;
+.mat-column-createdAt {
   width: 100px;
+  padding-right: 1rem;
+}
+.mat-column-phone {
+  max-width: 100px;
+  padding-right: 1rem;
+  word-break: break-all;
+}
+.mat-column-email {
+  max-width: 200px;
+  word-break: break-all;
+  padding-right: 1rem;
+}
+.mat-column-address {
+  max-width: 200px;
+}
+.mat-column-username {
+  max-width: 150px;
+  padding-right: 1rem;
 }
 .mat-header-cell {
   font-weight: bolder;
 }
 
-.card {
-  border-radius: 0.5rem;
-}
-
-.mask-custom {
-  background: rgba(24, 24, 16, 0.2);
-  border-radius: 2em;
-  backdrop-filter: blur(25px);
-  border: 2px solid rgba(255, 255, 255, 0.05);
-  background-clip: padding-box;
-  box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+.hide {
+  display: none;
 }
