--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
@@ -2,15 +2,28 @@ table {
   width: 100%;
 }
 .mat-column-id {
-  width: 50px;
-  padding-right: 24px;
+  width: 32px;
 }
-.mat-column-delete {
-  width: 50px;
-}
-.mat-column-edit {
-  text-align: center;
+.mat-column-createdAt {
   width: 100px;
+  padding-right: 1rem;
+}
+.mat-column-phone {
+  max-width: 100px;
+  padding-right: 1rem;
+  word-break: break-all;
+}
+.mat-column-email {
+  max-width: 200px;
+  word-break: break-all;
+  padding-right: 1rem;
+}
+.mat-column-address {
+  max-width: 200px;
+}
+.mat-column-username {
+  max-width: 150px;
+  padding-right: 1rem;
 }
 .mat-header-cell {
   font-weight: bolder;
