--- a/src/app/user-manage/components/add-user/add-user.component.html
+++ b/src/app/user-manage/components/add-user/add-user.component.html
@@ -50,7 +50,7 @@
             <div class="col-9">
               <select required ngModel name="userRoleId" class="form-select">
                 <option *ngFor="let item of roleList" [value]="item.id">
-                  {{ item.role_name }}
+                  {{ item.role }}
                 </option>
               </select>
             </div>
