--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,7 +98,7 @@
         <div class="rounded-circle" style="width: 50px; height: 50px;">
           <img
             class="img-fluid rounded-circle"
-            [src]="'http://localhost:5000/' + userInfo?.avatar"
+            [src]="'http://localhost:5000' + userInfo?.avatar"
             style="width: 50px; height: 50px;"
           />
         </div>
