--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.html
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.html
@@ -4,10 +4,11 @@
   </p>
   <button
     title="{{ 'user.create-user' | translate }}"
-    routerLink="/addUser"
     class="btn btn-primary float-end px-4 py-2"
   >
-    {{ 'add' | translate }}
+    <a class="text-white" routerLink="add">
+      {{ 'add' | translate }}
+    </a>
   </button>
 </div>
 <div class="container-fluid">
@@ -33,7 +34,7 @@
           {{ 'user.username' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          <div class="text-capitalize">{{ element.username }}</div>
+          <div class="text-capitalize">{{ element.name }}</div>
         </td>
       </ng-container>
 
@@ -59,7 +60,7 @@
           {{ 'user.role' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.rolename }}
+          {{ element?.user_role?.name }}
         </td>
       </ng-container>
 
@@ -67,20 +68,16 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button
-            [routerLink]="['/viewUser', element.id]"
-            title="{{ 'view' | translate }}"
-            mat-icon-button
-          >
-            <mat-icon>launch</mat-icon>
-          </button>
-          <button
-            [routerLink]="['/editUser', element.id]"
-            title="{{ 'edit' | translate }}"
-            mat-icon-button
-          >
-            <mat-icon>edit</mat-icon>
-          </button>
+          <a [routerLink]="['view', element.id]">
+            <button title="{{ 'view' | translate }}" mat-icon-button>
+              <mat-icon>launch</mat-icon>
+            </button>
+          </a>
+          <a [routerLink]="['edit', element.id]">
+            <button title="{{ 'edit' | translate }}" mat-icon-button>
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
           <button
             (click)="confirmDialog(element.id)"
             title="{{ 'delete' | translate }}"
