--- a/src/app/user-manage/components/view-user/view-user.component.html
+++ b/src/app/user-manage/components/view-user/view-user.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col-lg-8 px-xl-10">
         <div
-          class="bg-secondary d-lg-inline-block py-1-9 px-1-9 px-sm-6 mb-1-9 rounded"
+          class="bg-secondary d-lg-inline-block p-3 mb-1-9 rounded"
           style="width: 80%;"
         >
           <h3 class="h2 fs-3 text-white mb-3 text-capitalize">
@@ -69,7 +69,6 @@
             <span class="display-26 text-secondary me-2 font-weight-600">
               {{ 'user.address' | translate }}
             </span>
-            địa chỉ
           </li>
         </ul>
       </div>
