--- a/src/app/supplier-manage/containers/supplier/supplier.component.html
+++ b/src/app/supplier-manage/containers/supplier/supplier.component.html
@@ -25,7 +25,7 @@
         {{ 'regDate' | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
-        {{ element.createdAt | date: 'dd/MM/yyyy' }}
+        {{ element.createdAt | date: 'short' }}
       </td>
     </ng-container>
 
@@ -60,7 +60,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'user.address' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.address }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element?.province?.name }}-{{ element?.district?.name }}-{{
+          element?.ward?.name
+        }}-{{ element.address }}
+      </td>
     </ng-container>
 
     <!-- action Column -->
