--- a/src/app/user-manage/containers/customer-manage/customer-manage.component.html
+++ b/src/app/user-manage/containers/customer-manage/customer-manage.component.html
@@ -7,7 +7,9 @@
   <div>
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'id' | translate }}
+        </th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
       </ng-container>
 
@@ -17,7 +19,7 @@
           {{ 'regDate' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | date: 'dd/MM/yyyy' }}
+          {{ element.createdAt | date: 'short' }}
         </td>
       </ng-container>
       <!-- Name Column -->
@@ -26,7 +28,20 @@
           {{ 'user.username' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          <div class="text-capitalize">{{ element.name }}</div>
+          <div class="text-capitalize align-items-center d-flex">
+            <div
+              class="rounded-circle"
+              style="width: 35px; height: 35px; margin-right: 10px;"
+            >
+              <img
+                class="img-fluid rounded-circle"
+                [src]="'http://localhost:5000' + element?.avatar"
+                style="width: 35px; height: 35px;"
+              />
+            </div>
+
+            {{ element.name }}
+          </div>
         </td>
       </ng-container>
 
@@ -46,23 +61,16 @@
         <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
       </ng-container>
 
-      <!-- role Column -->
-      <ng-container matColumnDef="rolename">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ 'user.role' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          {{ element?.user_role?.name }}
-        </td>
-      </ng-container>
-
       <!-- action Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-          <button title="{{ 'view' | translate }}" mat-icon-button>
-            <mat-icon>launch</mat-icon>
-          </button>
+          <a [routerLink]="['view', element.id]">
+            <button title="{{ 'view' | translate }}" mat-icon-button>
+              <mat-icon>launch</mat-icon>
+            </button>
+          </a>
+
           <button
             (click)="confirmDialog(element.id)"
             title="{{ 'delete' | translate }}"
