--- a/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
+++ b/src/app/user-manage/containers/employee-manage/employee-manage.component.scss
@@ -5,7 +5,7 @@ table {
   width: 32px;
 }
 .mat-column-createdAt {
-  width: 100px;
+  width: max-content;
   padding-right: 1rem;
 }
 .mat-column-phone {
@@ -33,4 +33,8 @@ table {
 }
 a {
   text-decoration: none;
+}
+.mat-cell {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
