--- a/src/app/supplier-manage/containers/supplier/supplier.component.html
+++ b/src/app/supplier-manage/containers/supplier/supplier.component.html
@@ -47,12 +47,12 @@
       <td mat-cell *matCellDef="let element">{{ element.phone }}</td>
     </ng-container>
 
-    <!-- description Column -->
-    <ng-container matColumnDef="description">
+    <!-- email Column -->
+    <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        {{ 'user.description' | translate }}
+        {{ 'user.email' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
     </ng-container>
 
     <!-- address Column -->
