--- a/src/app/user-manage/components/view-user/view-user.component.html
+++ b/src/app/user-manage/components/view-user/view-user.component.html
@@ -9,7 +9,7 @@
       keyboard_backspace
     </mat-icon>
   </mat-button>
-  <p class="text-primary fs-3 px-3 mt-3">
+  <p class="text-black-50 fw-bold fs-3 px-3 mt-3">
     {{ 'user.user-info' | translate }}
   </p>
 </div>
