--- a/src/app/product-manage/containers/brand/brand.component.html
+++ b/src/app/product-manage/containers/brand/brand.component.html
@@ -1,1 +1,90 @@
-<p>brand works!</p>
+<div class="nav navbar mt-4 mb-5 mx-3 d-block">
+  <p class="fs-3 float-start text-black-50 fw-bold">
+    {{ 'brand.list-brand' | translate }}
+  </p>
+  <button
+    (click)="dialogAddBrand()"
+    title="{{ 'user.create-user' | translate }}"
+    class="btn btn-primary float-end px-4 py-2"
+  >
+    <a class="text-white">
+      {{ 'add' | translate }}
+    </a>
+  </button>
+</div>
+
+<div class="container-fluid">
+  <div>
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'id' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
+
+      <!-- regDate Column -->
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'regDate' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdAt | date: 'short' }}
+        </td>
+      </ng-container>
+
+      <!-- name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'brand.name' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      </ng-container>
+
+      <!-- publish Column -->
+      <ng-container matColumnDef="published">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'brand.published' | translate }}
+        </th>
+        <td mat-cell *matCellDef="let element">
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="flexSwitchCheckDefault"
+              [checked]="element.published"
+            />
+          </div>
+        </td>
+      </ng-container>
+
+      <!-- action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <a [routerLink]="['edit', element.id]">
+            <button title="{{ 'edit' | translate }}" mat-icon-button>
+              <mat-icon>edit</mat-icon>
+            </button>
+          </a>
+          <button
+            (click)="confirmDialog(element.id)"
+            title="{{ 'delete' | translate }}"
+            mat-icon-button
+          >
+            <mat-icon class="text-danger">delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+
+    <mat-paginator
+      #paginator
+      [length]="PageInfo.total ? PageInfo.total : 100"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 25, 100]"
+    ></mat-paginator>
+  </div>
+</div>
