--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
   >
     <mat-expansion-panel-header>
       <a mat-list-item>
-        <mat-icon>people</mat-icon>
+        <mat-icon>phone_iphone</mat-icon>
         <div>{{ 'product.product' | translate }}</div>
       </a>
     </mat-expansion-panel-header>
