--- a/src/app/product-manage/containers/brand/brand.component.html
+++ b/src/app/product-manage/containers/brand/brand.component.html
@@ -49,7 +49,9 @@
         <td mat-cell *matCellDef="let element">
           <div class="form-check form-switch">
             <input
+              (click)="confirmUpdate(element.id, element.published)"
               class="form-check-input"
+              style="width: 45px; height: 22px;"
               type="checkbox"
               id="flexSwitchCheckDefault"
               [checked]="element.published"
