--- a/src/app/product-manage/containers/product/product.component.html
+++ b/src/app/product-manage/containers/product/product.component.html
@@ -4,7 +4,7 @@
   </p>
   <button
     title="{{ 'user.create-user' | translate }}"
-    routerLink="/addUser"
+    routerLink="add"
     class="btn btn-primary float-end px-4 py-2"
   >
     {{ 'add' | translate }}
@@ -23,13 +23,13 @@
           {{ 'regDate' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | date: 'dd/MM/yyyy' }}
+          {{ element.createdAt | date: 'short' }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="brand">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ 'brand' | translate }}
+          {{ 'brands' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
           <div class="text-capitalize">{{ element.brand }}</div>
@@ -45,7 +45,7 @@
 
       <ng-container matColumnDef="stock">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ 'warehouse' | translate }}
+          {{ 'warehouse.warehouse' | translate }}
         </th>
         <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
       </ng-container>
@@ -59,7 +59,7 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="publish">
+      <ng-container matColumnDef="published">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'publish' | translate }}
         </th>
